few more api updates
