# src/services/events/teams/routes.rs
@@ -17,6 +17,6 @@ pub fn teams_routes() -> Resource {
 
 /// Resource routes for a specific event player
 pub fn teams_players_routes() -> Resource {
-    web::resource("/teams/{team_id}/players")
+    web::resource("/teams/players")
         .route(web::get().to(handlers::get_team_players))
 }
